hadra-build-tool/src/test/resources/net/vpc/hadralang/test/compiler/success/testCompilerSuccess0033.hl
package net.vpc.hadralang.test:test06;
/**
 * tested :
 *   * -5 <= x <= 42: (from python)
 */
def void main(String[] args){

    int b=3;
    if(1<b<3>2){
        println("less");
    }

    int x=3;
    if(2<=x){
        println('ok');
    }
    if(2<=x<4>1){
        println('ok');
    }
}