hadra-build-tool/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0017.hl
package net.vpc.hlexamples;
def main(String[] args,String[] args,int z){
    println("hello world");
    int a=z;
    int z;
}